--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "strmcsf": {
+    "strmcsf1": {
         "name": "strmcsf",
         "description": "strm整理入库时通知ChineseSubFinder下载字幕。",
         "labels": "字幕",
-        "version": "1.1",
+        "version": "1.3",
         "icon": "chinesesubfinder.png",
         "author": "jimmg5202",
         "level": 1
